refactor: update demo for gradle-jextract version 0.5.0